Sat Dec  5 17:58:51 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastConfiguration.h:
        * dds/DCPS/transport/multicast/MulticastConfiguration.cpp:
        * dds/DCPS/transport/multicast/ReliableMulticast.cpp:
        * dds/DCPS/transport/multicast/multicast.ini-dist:
        * docs/html/multicast/index.html:

          Updated documentation; renamed nak_repair_size to nak_depth.

Fri Dec  4 22:34:19 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendBuffer.h:
        * dds/DCPS/transport/framework/TransportSendBuffer.inl:
        * dds/DCPS/transport/framework/TransportSendBuffer.cpp:
        * dds/DCPS/transport/framework/TransportSendStrategy.h:
        * dds/DCPS/transport/framework/TransportSendStrategy.inl:
        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          Updated header allocation behavior to use pools; this fixed an
          issue which prevented proper repair responses from active peers
          in the multicast transport.

Fri Dec  4 16:50:11 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastDataLink.h:
        * dds/DCPS/transport/multicast/MulticastDataLink.inl:
        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:
        * dds/DCPS/transport/multicast/ReliableMulticast.h:
        * dds/DCPS/transport/multicast/ReliableMulticast.cpp:

          Updated initialization behavior for send buffer; this fixes a
          potential race condition where data is received prior to the
          ReliableMulticast::join_i call is completed.

Fri Dec  4 14:13:59 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/ReliableMulticast.cpp:

          Reverted temporary debug logging.

Fri Dec  4 00:49:30 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * docs/html/multicast/index.html:

          Corrected minor nits.
