@@ -1,3 +1,13 @@
+Sat Dec  5 19:03:48 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/transport/framework/TransportSendBuffer.cpp:
+        * dds/DCPS/transport/framework/TransportSendStrategy.h:
+        * dds/DCPS/transport/framework/TransportSendStrategy.inl:
+        * dds/DCPS/transport/multicast/MulticastConfiguration.h:
+
+          Added missing locking in TransportSendBuffer::resend; updated
+          formatting in MulticastConfiguration.h.
+
 Sat Dec  5 17:58:51 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * dds/DCPS/transport/multicast/MulticastConfiguration.h:
